--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -3,48 +3,29 @@
 }
 
 .navbar-expand-lg .navbar-collapse{
-   margin-top: 10px;
+   margin-top: 0;
 }
-
 
 .link_header {
-  /* background: #01288F; */
-  /* min-height: 20px; */
-  /* border-bottom: 7px solid #FF3A00; */
   position: relative;
-  /* height: 79px; */
-  /* -webkit-box-shadow: 0 0 5px #00000087;
-          box-shadow: 0 0 5px #00000087; */
-  /*
-    margin-bottom: 7rem !important; */
   background: url(/assets/shape-with-border.svg);
-  /*  : url(/LINKS-STAGING/assets/shape-with-border.svg); */
-
-  background-size: cover;
   width: 100%;
-  height: 100%;
-  padding-bottom: 5%;
+  height: 133px;
+  padding-bottom: 4%;
   z-index: 2;
+  background-repeat: no-repeat;
 }
 
-.link_header::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 2%;
-  background-color: #01288F;
+@media (max-width: 1700px) {
+  .link_header {
+     background-position: -150px;
+  }
 }
 
-.link_header::before {
-  content: "";
-  position: absolute;
-  bottom: 1px;
-  left: 0;
-  width: 3%;
-  height: 100%;
-  background-color: #01288F;
+@media (max-width: 1500px) {
+  .link_header {
+     background-position: -280px;
+  }
 }
 
 .link_header .navbar-nav li a {
@@ -159,7 +140,6 @@
   z-index: 10;
 }
 
-
 @media (max-width: 990px) {
   .link_header .navbar-nav.user_account li .dropdown-menu:after {
     display: none;
@@ -232,18 +212,12 @@
   z-index: 5;
   color: #ffffff;
   text-transform: uppercase;
-  top: 25px;
+  top: 15px;
   left: 40%;
 }
 
 .link_header .navbar-brand .logo img{
-  width: 10rem;
-}
-
-@media (max-width: 990px) {
-  .link_header .navbar-brand .logo {
-    top: 0;
-  }
+  /* width: 10rem; */
 }
 
 @media (min-width: 1093px) {
@@ -260,7 +234,16 @@
 
 @media (max-width: 1370px) {
   .link_header .navbar-brand .logo {
-    left: 5%;
+    /* left: 5%; */
+  }
+}
+
+@media (max-width: 990px) {
+  .link_header{
+    height: auto;
+  }
+  .link_header .navbar-brand .logo {
+    top: 0;
   }
 }
 
