--- a/src/app/components/email-jobs/email-jobs.component.html
+++ b/src/app/components/email-jobs/email-jobs.component.html
@@ -46,13 +46,20 @@
                       <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
                         <h6>Sent</h6>
                       </th>
-                      <td mat-cell *matCellDef="let element let rowIndex = index">
+                      <td class="not_read" mat-cell *matCellDef="let element let rowIndex = index">
                         {{element.created_at|dateAgo}}
                         <!-- <button mat-raised-button
                         matTooltip="Info about the action"
                         aria-label="Button that displays a tooltip when focused or hovered over">
                           Action
                           </button> -->
+
+                          <div class="icon_area">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+                              <path id="Path_231" data-name="Path 231" d="M20.54,5.23,19.15,3.55A1.451,1.451,0,0,0,18,3H6a1.486,1.486,0,0,0-1.16.55L3.46,5.23A1.958,1.958,0,0,0,3,6.5V19a2.006,2.006,0,0,0,2,2H19a2.006,2.006,0,0,0,2-2V6.5A1.958,1.958,0,0,0,20.54,5.23Zm-5.39,9.62-2.79,2.79a.5.5,0,0,1-.71,0L8.86,14.85A.5.5,0,0,1,9.21,14H11V11a1,1,0,0,1,2,0v3h1.79A.5.5,0,0,1,15.15,14.85ZM5.12,5l.81-1h12l.94,1Z" transform="translate(-3 -3)" fill="#707070"/>
+                            </svg>
+                          </div>
+
                       </td>
                     </ng-container>
                     <ng-container matColumnDef="subject">
@@ -148,6 +155,7 @@
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">
                         {{element.created_at|dateAgo}}
+
                       </td>
                     </ng-container>
 
