--- a/src/app/components/jobs/jobs.component.html
+++ b/src/app/components/jobs/jobs.component.html
@@ -30,10 +30,19 @@
                       <h6>Last Acted On</h6>
                     </th>
                     <th>
+                      <h6>Failed/Pending/Completed</h6>
+                    </th>
+                    <th>
                       <h6>Certificate Name</h6>
                     </th>
                   </tr>
                   <tr *ngFor="let element of unReleasedJobsDataSource">
+                    <td>
+                      {{element.updatedAt|dateAgo}}
+                    </td>
+                    <td>
+                      Pending 
+                    </td>
                     <td>
                       {{element.updatedAt|dateAgo}}
                     </td>
@@ -42,6 +51,9 @@
                     </td>
                     <td class="hover_details">
                       <ul class="actiion_list">
+                        <li>
+                          <a class="btn-orange-outline-border">Release</a>
+                        </li>
                         <li>
                           <a class="btn-orange-outline-border" (click)="validateOnServer(element)">Validate</a>
                         </li>
@@ -86,8 +98,16 @@
                       <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
                         <h6>Released</h6>
                       </th>
-                      <td mat-cell *matCellDef="let element let rowIndex = index" (click)="$event.stopPropagation()">
-                        {{element.created_at|dateAgo}} </td>
+                      <td class="not_read" mat-cell *matCellDef="let element let rowIndex = index" (click)="$event.stopPropagation()">
+                        {{element.created_at|dateAgo}} 
+                      
+                        <div class="icon_area">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+                            <path id="Path_231" data-name="Path 231" d="M20.54,5.23,19.15,3.55A1.451,1.451,0,0,0,18,3H6a1.486,1.486,0,0,0-1.16.55L3.46,5.23A1.958,1.958,0,0,0,3,6.5V19a2.006,2.006,0,0,0,2,2H19a2.006,2.006,0,0,0,2-2V6.5A1.958,1.958,0,0,0,20.54,5.23Zm-5.39,9.62-2.79,2.79a.5.5,0,0,1-.71,0L8.86,14.85A.5.5,0,0,1,9.21,14H11V11a1,1,0,0,1,2,0v3h1.79A.5.5,0,0,1,15.15,14.85ZM5.12,5l.81-1h12l.94,1Z" transform="translate(-3 -3)" fill="#707070"/>
+                          </svg>
+                        </div>
+
+                      </td>
                     </ng-container>
   
                     <ng-container matColumnDef="name">
