--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,7 +17,7 @@
                 <img class="info_art" src="../../../assets/info-art.png" alt="info">
             </div>
             <div class="col-lg-auto">
-                <div class="card shadow text-center border-0 auth-card">
+                <div class="card shadow  border-0 auth-card">
                     <h2 class="title mt-0">
                         {{step === 'login' ? 'Welcome Back!' : 'Enter OTP'}}
                     </h2>
@@ -64,10 +64,10 @@
                         </div>
 
                         
-                        <!-- <div class="form-group mb-0" *ngIf="step === 'login'">
+                        <div class="form-group mb-0" *ngIf="step === 'login'">
                             <p class="text-center mb-3 mt-5">Don't have an account?</p>
                             <a [routerLink]="'/register'" class="btn btn-block btn-orange-outline-border btn-md">Register</a>
-                        </div> -->
+                        </div>
                         <div class="form-group" *ngIf="step === 'otp'">
                             <p class="text-center my-5"><span class="resend" (click)="resendOTP()">Resend OTP</span> available {{format(countDownTime)}}</p>
                         </div>
