--- a/src/app/components/noauth-nav/noauth-nav.component.css
+++ b/src/app/components/noauth-nav/noauth-nav.component.css
@@ -1,31 +1,11 @@
 .link_header {
     position: relative;
     background: url(/assets/shape-with-border.svg);
-    background-size: cover;
+    background-position: -250px;
     width: 100%;
-    height: 100%;
-    padding-bottom: 5%;
+    height: 133px;
+    padding-bottom: 4%;
     z-index: 2;
-}
-
-.link_header::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 2%;
-    background-color: #01288F;
-}
-
-.link_header::before {
-    content: "";
-    position: absolute;
-    bottom: 1px;
-    left: 0;
-    width: 3%;
-    height: 100%;
-    background-color: #01288F;
 }
 
 .link_header .navbar-nav li a {
@@ -132,11 +112,11 @@
 
 @media (min-width: 1093px) {
     .link_header .navbar-brand .logo {
-        left: 2em;
+        left: 0;
     }
 
     .link_header .navbar-brand .logo img{
-        width: 10rem;
+        /* width: 10rem; */
     }
 }
 
