--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -22,6 +22,7 @@
     font-family: 'Saira', sans-serif;
     overflow: hidden;
     font-weight: 400;
+    max-width: 450px;
 }
 
 .auth-card .title {
@@ -57,6 +58,7 @@
     line-height: 39px;
     color: #707070;
     font-weight: 400;
+    font-family: Bahnschrift;
 }
 
 .steps {
