--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -17,8 +17,10 @@
             </div>
             <div class="col-xl-4">
                 <div class="card shadow border-0 auth-card">
-                    <h2 class="title" *ngIf="step === 1">Welcome Aboard!</h2>
-                    <h4 class="subtitle my-4">New User Registration</h4>
+                    <h2 class="title mb-5 mt-0" *ngIf="step === 1">Welcome Aboard!</h2>
+                    <h4 *ngIf="step === 2" class="subtitle mb-3 mt-0"> 
+                        <button  class="btn pt-2 pb-2 pl-3 pr-3 border ng-tns-c3-2 ng-star-inserted"><i class="fas fa-arrow-left"></i></button>
+                        New User Registration</h4>
                     
                     <form class="auth-form" [formGroup]="registerForm">
                         <div class="form-step" [ngClass]="{active: step == 1}">
