cleand code, fixed resend otp, after register success show a message

--- a/src/app/components/admin-profile-edit/admin-profile-edit.component.html
+++ b/src/app/components/admin-profile-edit/admin-profile-edit.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
 
-  <form [formGroup]="updateForm" class="profile-update-form">
+  <form *ngIf="updateForm" [formGroup]="updateForm" class="profile-update-form">
 
     <div class="row">
       <div class="col-md-6">
