--- a/src/app/components/certificate-template/certificate-template.component.html
+++ b/src/app/components/certificate-template/certificate-template.component.html
@@ -1,5 +1,5 @@
 <!--<app-navbar></app-navbar>-->
-<div class="container mt-5">
+<div class="container mt-5" *ngIf="templateData">
   <div class="box-area">
     <div class="row">
       <div class="col-md-12">
