--- a/src/app/components/email-job-detail/email-job-detail.component.html
+++ b/src/app/components/email-job-detail/email-job-detail.component.html
@@ -1,6 +1,6 @@
 
 <!--<app-navbar></app-navbar>-->
-<div class="container mt-5">
+<div class="container mt-5" *ngIf="details">
   <div class="box-area">
     <div class="row">
       <div class="col-md-12">
